# coldth

./: .gitignore  README.md  pyproject.toml
deploy/: README.md  asound-analyzer.conf.example  camilladsp.service  coldth.service  shairport-sync.conf.example  snd-aloop.conf
docs/: analyzer.md  api-v1.md  audio-architecture.md  pi-install.md  pi4-installation.md  theme-packages.md
scripts/: install-pi.sh  uninstall-pi.sh  verify-pi.sh
src/coldth/: __init__.py  analyzer.py  app.py  camilla.py  events.py  main.py  metadata.py  model.py  store.py  themes.py
src/coldth/static/: app.js  index.html  settings.html  settings.js  styles.css
src/coldth/static/themes/black-1987/: theme.css  theme.json
src/coldth/static/themes/original-yellow/: theme.css  theme.json
tests/: test_analyzer.py  test_api.py  test_camilla.py  test_metadata.py  test_model.py  test_store.py  test_themes.py
