[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coldth"
version = "0.1.0"
description = "A headless Raspberry Pi graphic equalizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "websocket-client>=1.8,<2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[project.scripts]
coldth = "coldth.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coldth = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
